--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,34 @@ requires = [
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "openVO"
+version = "0.0.7"
+authors = [
+    {name="Kevin Spevak", email="kevinspevak@gmail.com"},
+]
+description = "Visual Odometry in python with openCV"
+readme = "README.md"
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+requires-python=">=3.8, <3.11"
+dependencies = [
+    "opencv-contrib-python",
+    "numpy",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/KevinSpevak/openVO"
+"Bug Tracker" = "https://github.com/KevinSpevak/openVO/issues"
+
+[project.optional-dependencies]
+oak = [
+    "oakutils>=1.2"
+]
+
+[tool.setuptools.packages.find]
+where = ["src"]
